# Legate.Studio

./: LICENSE  README.md  architecture.ologic  fly.dev.toml  pyproject.toml
.github/workflows/: fly-deploy.yml  test.yml
.ologic/: chat-subscription-awareness.ologic.yaml
docs/: deployment.md  recovery.md  spec-conduct-links.md
src/: main.py  requirements.txt
src/legate_studio/: __init__.py  admin.py  agents.py  assets.py  auth.py  categories.py  chat.py  chord_executor.py  chords.py  core.py  dashboard.py  dropbox.py  github_app.py  import_api.py  library.py  main.py  markdown_importer.py  mcp_server.py  memory_api.py  motif_api.py  motif_processor.py  recovery.py  shared_libraries.py  stripe_billing.py  worker.py  worker_main.py
src/legate_studio/modules/: README.md
src/legate_studio/rag/: __init__.py  chat_service.py  chat_session_manager.py  context_builder.py  database.py  embedding_provider.py  embedding_service.py  gemini_provider.py  github_service.py  library_sync.py  ollama_provider.py  openai_provider.py  usage.py
src/legate_studio/templates/: 404.html  about.html  agents.html  base.html  billing.html  categories.html  chat.html  chords.html  contact.html  dashboard.html  dashboard_graph3d.html  docs_mcp.html  dropbox.html  dropbox_disabled.html  error.html  faq.html  features.html  import.html  import_preview.html  landing.html  (+31 more)
src/legato_pit/: admin.py  auth.py  core.py  crypto.py  mcp_server.py  oauth_server.py  stripe_billing.py
tests/: __init__.py  conftest.py  test_auth.py  test_health.py  test_mcp_auth.py
utils/: flask_keygen.py
(+21 files in other folders)
